--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,82 +1,69 @@
 {{define "signup.html"}}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SignUp Page</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    </head>
-    
-    <body>
-        <div class="text-bg-primary p-3 text-center">Content WebApp</div>
 
-        <div class="container">
-           <div class="row">
-             <div class="col">
-                <h1 >SignUp Here</h1>
-
-                <div >
-                    <a href="/" type="button" class="btn btn-dark" >Home</a>
-                </div>
-                
-                <form method="post" action="/signup" novalidate> <!--no validate wont validate until the parameters based in forms.go (email) are met  -->
-                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"> 
-                  <div class="form-group mt-3">
-                      <label for="email">Email:</label>
-                      {{with .Form.Errors.Get "email"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
-                          <label class="text-danger">{{.}}</label>
-                      {{end}}
-                      <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
-                             id="email" autocomplete="off" type='email'
-                             name='email' value="" required>
-                  </div>
-      
-                  <div class="form-group ">
-                      <label for="password">Password:</label>
-                      {{with .Form.Errors.Get "password"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
-                          <label class="text-danger">{{.}}</label>
-                      {{end}}
-                      <input class="form-control {{with .Form.Errors.Get "password"}} is-invalid {{end}}"
-                             id="password" autocomplete="off" type='password'
-                             name='password' value="" required>
-                  </div>
-
-                  <hr>
-                  <!--submit button-->
-                     <input type="submit" class="btn btn-primary" value="SignUp">
-                   </form>
-
-                </div>
-              </div>
-          </div>
-
-          {{block "js" .}}
-          {{end}}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-
-       //handling the displaying of messages on each page based on the template data
-        //with gets the objects 
-        {{with .Flash}}
-        notify("{{.}}","success")
-        {{end}}
-
-        {{with .Error}}
-        notify("{{.}}", "error")
-        {{end}}
-
-        {{with .Flash}}
-        notify("{{.}}", "success")
-        {{end}}
-
-        {{with .Warning}}
-        notify("{{.}}", "warning")
-        {{end}}
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>SignUp Page</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+            <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css"> <!--notie alerts -->
+        </head>
         
-        
-        </script>
-    </body>
-    </html>
+        <body>
+            <div class="text-bg-primary p-3 text-center">Content WebApp</div>
 
-{{end}}
+            <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 >SignUp Here</h1>
+
+                    <div >
+                        <a href="/" type="button" class="btn btn-dark" >Home</a>
+                    </div>
+                    
+                    {{ template "messages" . }}
+                    <form method="post" action="/signup" novalidate> <!--no validate wont validate until the parameters based in forms.go (email) are met  -->
+                        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"> 
+                    <div class="form-group mt-3">
+                        <label for="email">Email:</label>
+                        {{with .Form.Errors.Get "email"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
+                                id="email" autocomplete="off" type='email'
+                                name='email' value="" required>
+                    </div>
+        
+                    <div class="form-group ">
+                        <label for="password">Password:</label>
+                        {{with .Form.Errors.Get "password"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "password"}} is-invalid {{end}}"
+                                id="password" autocomplete="off" type='password'
+                                name='password' value="" required>
+                    </div>
+
+                    <hr>
+                    <!--submit button-->
+                        <input type="submit" class="btn btn-primary" value="SignUp">
+                    </form>
+
+                    </div>
+                </div>
+            </div>
+
+            
+            
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+            {{block "js" .}}
+
+            {{end}}
+       
+        </body>
+        </html>
+
+    {{end}}
+ 
